# super_lean_management_engine

./: Makefile  README.md  pyproject.toml
.kiro/specs/dual-board-kanban/: design.md  requirements.md  tasks.md
src/dual_board_kanban/: __init__.py  dual_board_kanban.db  dual_board_kanban_server.py  streamlit_app.py
src/dual_board_kanban/application/: __init__.py  board_service.py  detail_page_service.py  hypothesis_service.py  metrics_service.py  work_item_service.py
src/dual_board_kanban/domain/: flow_metrics.py  hypothesis.py  value_objects.py  work_item.py
src/dual_board_kanban/infrastructure/: __init__.py  base.py  repositories.py
tests/: __init__.py  conftest.py  test_application_services.py  test_domain_entities.py  test_repositories.py
