[project]
name = "super-lean-management-engine"
version = "0.1.0"
description = "Dual-board Kanban system for strategic-tactical alignment"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "asana>=5.2.2",
    "fastapi>=0.103.2",
    "hypothesis>=6.79.4",
    "pyarrow<20",
    "pydantic>=2.5.3",
    "pytest>=7.4.4",
    "requests>=2.31.0",
    "streamlit>=1.40.1",
    "urllib3<2.0",
    "uvicorn>=0.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
]

